# duck-assistant

./: .gitignore  README.md  pyproject.toml  requirements.txt
chromadb_data/: chroma.sqlite3
duck/: chat_engine.py  cli.py  config.json  indexer.py  model_interface.py  session_manager.py
